...
  }

  bool loading = false;
  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(title: const Text("Checkout"), backgroundColor: Theme.of(context).colorScheme.inversePrimary,),
      body: Center(
        child: Column(children: [
          for (int i = 0; i < widget.timeslots.length; i++) ... [
            Hero(
              tag: "booking_time ${widget.date}",
              child: Material(
...
